TableDefinition is now immutable, and the methods (especially for creation, but also for column access) have been cleaned up